--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 		<div class="message-box" id="messageBox">
 			<span class="close" id="closeButton">&times;</span>
-			<p>Вирусы не обнаружены✅</p>
+			<p>Угроз не обнаружено✅</p>
 		</div>
 
 		<script>
